--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -10571,7 +10571,7 @@ ul .submenu input {
      28. Radio CSS Start
 ==========================**/
 
-.checkbox label,.checkbox span {
+.checkbox label, .checkbox span {
     display: inline-block;
     position: relative;
     padding-left: 16px;
@@ -10580,9 +10580,7 @@ ul .submenu input {
     margin-bottom: 10px;
 }
 
-.checkbox label::before,
-.checkbox span::before
- {
+.checkbox label::before, .checkbox span::before {
     content: "";
     display: inline-block;
     position: absolute;
@@ -10597,8 +10595,7 @@ ul .submenu input {
     transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
-.checkbox label::after,
-.checkbox span::after {
+.checkbox label::after, .checkbox span::after {
     display: inline-block;
     position: absolute;
     width: 16px;
@@ -30789,9 +30786,7 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
     padding-left: unset;
 }
 
-.rtl .checkbox label::before,
-.rtl .checkbox span::before
- {
+.rtl .checkbox label::before, .rtl .checkbox span::before {
     right: 0;
     left: unset;
     margin-right: -16px;
@@ -33875,7 +33870,7 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
     background: linear-gradient(to bottom, rgba(60, 117, 244, 1) 0%, rgba(63, 81, 254, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3c75f4', endColorstr='#3f51fe', GradientType=0);
      */
-     background:#3f54ff;
+    background: #3f54ff;
 }
 
 .r-modal .modal-header .modal-title {
@@ -34074,9 +34069,11 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
     -webkit-backface-visibility: hidden;
     z-index: 1;
 }
+
 .radialnav.active {
     left: -63px;
 }
+
 .radialnav .ellipsis {
     position: absolute;
     left: 50%;
@@ -34098,6 +34095,7 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
     /* transition: all 0.3s ease-in-out; */
     box-shadow: -5px 0px 5px 0 rgba(0, 0, 0, .1);
 }
+
 /*.radialnav .ellipsis:active, .radialnav .ellipsis:hover {
                     box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.44);
                     background: #3f54fe;
@@ -34111,7 +34109,7 @@ body .page-wrapper .page-body-wrapper .page-sidebar.native-image-bg .sidebar-use
 .radialnav.active .ellipsis {
     /*box-shadow: 0px 0 10px 18px #d8e1fe, 0 0px 20px 20px rgba(0,0,0,.5), 0 0 0px 20px #d8e1fe;*/
     bottom: -18px;
-    box-shadow: -2px 0 2px 2px rgba(0, 0, 0, .1) inset, -2px 0px 4px 0 rgba(0, 0, 0, 0.05), -5px 0 0px 5px #f1f1f1,  -6px 0px 0px 6px rgba(0, 0, 0, 0.3);
+    box-shadow: -2px 0 2px 2px rgba(0, 0, 0, .1) inset, -2px 0px 4px 0 rgba(0, 0, 0, 0.05), -5px 0 0px 5px #f1f1f1, -6px 0px 0px 6px rgba(0, 0, 0, 0.3);
     /* box-shadow: -2px 0 2px 2px rgba(0, 0, 0, .1) inset, -2px 0px 4px 0 rgba(0, 0, 0, 0.05), -5px 0 0px 5px #f1f1f1, 0 0px 6px 0px rgba(0, 0, 0, 0.3), -6px 0px 0px 6px rgba(0, 0, 0, 0.3); */
 }
 
@@ -34875,6 +34873,10 @@ i.icon.attachments {
     background-image: url(../images/Ribbon/attachments.svg);
 }
 
+i.icon.attachments-view {
+    background-image: url(../images/Ribbon/attachments-view.svg);
+}
+
 i.icon.submit-referral {
     background-image: url(../images/Ribbon/save.svg);
 }
@@ -35457,15 +35459,14 @@ i.icon.internal-replication {
     background-image: url(../images/modal/new-referral/attach-authority.svg);
 }
 
-.rtl .r-modal .checkbox label ,
-.rtl .r-modal .checkbox span {
+.rtl .r-modal .checkbox label, .rtl .r-modal .checkbox span {
     margin: 3px;
     padding-left: 0;
     padding-right: 15px;
     transition: none;
 }
 
-.rtl .r-modal .checkbox label::before,.rtl .r-modal .checkbox span::before {
+.rtl .r-modal .checkbox label::before, .rtl .r-modal .checkbox span::before {
     margin: 0 -8px;
     width: 15px;
     height: 15px;
@@ -35479,8 +35480,7 @@ i.icon.internal-replication {
     transition: none;
 }
 
-.rtl .r-modal .checkbox input[type="checkbox"]:checked+label::before,
-.rtl .r-modal .checkbox input[type="checkbox"]:checked+span::before {
+.rtl .r-modal .checkbox input[type="checkbox"]:checked+label::before, .rtl .r-modal .checkbox input[type="checkbox"]:checked+span::before {
     margin: 0 -11px;
     content: "";
     border: none;
@@ -35860,10 +35860,12 @@ th[class*=MuiTableCell-root] {
 .r-modal .r-main-box__ribbon .nav-tabs>li {
     margin-top: 0;
 }
-.r-modal .r-main-box__ribbon .nav-tabs>li>a{
+
+.r-modal .r-main-box__ribbon .nav-tabs>li>a {
     border-radius: 0;
     height: 34px!important;
 }
+
 .r-modal .r-main-box__ribbon .nav-tabs>li>a:not(.active) {
     background: url(../images/r-modal-tab.svg) no-repeat top right;
     background-size: 120px;
@@ -35875,13 +35877,13 @@ th[class*=MuiTableCell-root] {
 
 .r-modal .r-main-box__ribbon .nav-tabs>li:first-child>a.active {
     background-color: #3f54ff;
-    color:#fff!important;
+    color: #fff!important;
 }
 
 .r-modal .r-main-box__ribbon .nav-tabs>li:only-child>a.active {
-    background:#3f54ff url(../images/r-modal-tab-active.svg) no-repeat center right;
+    background: #3f54ff url(../images/r-modal-tab-active.svg) no-repeat center right;
     background-size: contain;
-    color:#fff!important;
+    color: #fff!important;
     border-bottom-left-radius: 35px;
 }
 
@@ -35905,8 +35907,6 @@ th[class*=MuiTableCell-root] {
     border-color: transparent #009345 transparent transparent;
 }
 
-
-
 .r-modal.r-automation-modal .r-main-box__ribbon .nav-tabs>li:first-child>a.active {
     background-color: #009345;
     height: 33px!important;
@@ -35929,24 +35929,29 @@ th[class*=MuiTableCell-root] {
     color: #fff!important;
     margin-top: -1px;
 }
+
 /* 
 .r-modal .r-main-box__ribbon .nav-tabs{
 min-height: 32px;
 } */
-.r-diagram-modal-content{
-    padding:20px;
+
+.r-diagram-modal-content {
+    padding: 20px;
 }
-#r-diagram-row-main{
+
+#r-diagram-row-main {
     overflow-x: hidden;
 }
+
 #r-diagram-content {
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    border-radius:5px;
+    border-radius: 5px;
     /* background-color: #f2f2f2; */
 }
+
 #r-diagram-sidebar {
     -webkit-transition: margin 0.3s ease;
     -moz-transition: margin 0.3s ease;
@@ -35955,65 +35960,132 @@ min-height: 32px;
     padding-left: 20px;
 }
 
-
 .collapsed {
-    display: none; /* hide it for small displays */
+    display: none;
+    /* hide it for small displays */
 }
+
 @media (min-width: 992px) {
     .collapsed {
         display: block;
-        margin-right: -41.666667%; /* same width as sidebar */
+        margin-right: -41.666667%;
+        /* same width as sidebar */
     }
 }
 
-.toggle-diagram{
+.toggle-diagram {
     position: absolute;
-    left:-15px;
-    top:0;
+    left: -15px;
+    top: 0;
     bottom: 0;
-    height:100%;
-    width:30px;
+    height: 100%;
+    width: 30px;
     background-color: #f2f3f2;
     margin-right: 5px;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    border-radius:5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
     z-index: 2;
-    box-shadow: -2px 0 0 3px  #fff;
+    box-shadow: -2px 0 0 3px #fff;
     /* border-left: 4px solid #fff; */
 }
-.collapsed .toggle-diagram{
-    left:-30px;
+
+.collapsed .toggle-diagram {
+    left: -30px;
 }
 
-.toggle-diagram-sidebar{
-    width:40px;
+.toggle-diagram-sidebar {
+    width: 40px;
     height: 40px;
-    background-color:#fff;
-    border-radius:50%;
-    background-image:url(../images/modal/referral-result/authority-toggle-close-green.svg);
+    background-color: #fff;
+    border-radius: 50%;
+    background-image: url(../images/modal/referral-result/authority-toggle-close-green.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 18px;
     position: absolute;
-    top:50%;
-    transform:translateY(-50%) rotate(90deg);
-    box-shadow: 0 -2px 4px 0 rgba(0,0,0,.2);
+    top: 50%;
+    transform: translateY(-50%) rotate(90deg);
+    box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, .2);
     border: 0;
     cursor: pointer;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    left:-15px;
-}
-.collapsed .toggle-diagram-sidebar
-{
-    transform:translateY(-50%) rotate(-90deg);
+    left: -15px;
 }
 
-.toggle-diagram-sidebar:focus{
+.collapsed .toggle-diagram-sidebar {
+    transform: translateY(-50%) rotate(-90deg);
+}
+
+.toggle-diagram-sidebar:focus {
     outline: none;
+}
+
+.disable-select {
+    user-select: none;
+    /* supported by Chrome and Opera */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+}
+
+.react-confirm-alert-body>h1 {
+    margin-bottom: 20px;
+}
+
+.react-confirm-alert-overlay {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.react-confirm-alert-body {
+    border-radius: 5px;
+    font-size: 13px;
+    text-align: center;
+}
+
+.react-confirm-alert-body::before {
+    content: "";
+    display: inline-block;
+    margin-bottom: 20px;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background: url(../images/alert.svg) no-repeat center center;
+    background-size: 80px;
+}
+
+.react-confirm-alert-button-group {
+    justify-content: center;
+}
+
+.react-confirm-alert-button-group button {
+    min-width: 100px;
+    padding: .5rem;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.react-confirm-alert-button-group button:hover {
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, .08)
+}
+
+.react-confirm-alert-button-group button:last-child {
+    background-color: #d0d0d0;
+    color: #4d4d4d;
+}
+
+.react-confirm-alert-button-group button:first-child {
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
