--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -3714,6 +3714,7 @@ ul.notification-dropdown.onhover-show-div li .notification-icon {
     box-shadow: none;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
     margin-bottom: 11px;
+    cursor:pointer;
 }
 
 .page-wrapper .page-body-wrapper .page-sidebar .sidebar-menu li>a>.fa-angle-down {
