--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -35673,7 +35673,7 @@ i.icon.view-secretariat {
 .r-main-box [class*=RootBase-root] {
     border: none;
 }
-
+/* 
 [class*=RootBase-root] * {
     direction: rtl;
     font-family: IRANSans_Fa!important;
@@ -35698,7 +35698,7 @@ i.icon.view-secretariat {
     padding-top: 0!important;
     padding-bottom: 0!important;
 
-} */
+} 
 
 [class*=MuiListItem-button] {
     text-align: right!important;
@@ -35769,10 +35769,6 @@ i.icon.view-secretariat {
     justify-content: space-between!important;
 }
 
-[class*=MuiSvgIcon-root] {
-    font-size: 16px!important;
-}
-
 [class*=Pagination-next] path {
     transform: rotateY(180deg) translateX(-25px);
 }
@@ -35826,7 +35822,7 @@ i.icon.view-secretariat {
     box-shadow: none;
     outline: none;
     border-color: rgba(224, 224, 224, 1);
-}
+} 
 
 .btn {
     font-size: 13px!important;
@@ -35844,7 +35840,7 @@ i.icon.view-secretariat {
 th[class*=MuiTableCell-root] {
     border-bottom: 2px solid #dee2e6
 }
-
+*/
 .JDatePicker .JC-Nav {
     cursor: pointer;
 }
