--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -3714,7 +3714,7 @@ ul.notification-dropdown.onhover-show-div li .notification-icon {
     box-shadow: none;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
     margin-bottom: 11px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .page-wrapper .page-body-wrapper .page-sidebar .sidebar-menu li>a>.fa-angle-down {
@@ -34827,171 +34827,217 @@ i.icon {
 }
 
 /* بازخوانی اطلاعات */
+
 i.icon.refresh-information {
     background-image: url(../images/Ribbon/refresh-information.svg);
 }
 
 /* نتیجه ارجاع */
+
 i.icon.referral-result {
     background-image: url(../images/Ribbon/referral-result.svg);
 }
 
 /* نشانه ها */
+
 i.icon.marks {
     background-image: url(../images/Ribbon/marks.svg);
 }
 
 /* حذف نشانه */
+
 i.icon.remove-mark {
     background-image: url(../images/Ribbon/remove-mark.svg);
 }
 
 /* نشانه گذاری */
+
 i.icon.marking {
     background-image: url(../images/Ribbon/marking.svg);
 }
 
 /* دیاگرام عطف */
+
 i.icon.follow-up-diagram {
     background-image: url(../images/Ribbon/follow-up-diagram.svg);
 }
 
 /* دیاگرام */
+
 i.icon.diagram {
     background-image: url(../images/Ribbon/diagram.svg);
 }
 
 /* تایید */
+
 i.icon.confirmation {
     background-image: url(../images/Ribbon/confirmation.svg);
 }
 
 /* بازسازی */
+
 i.icon.rebuild {
     background-image: url(../images/Ribbon/rebuild.svg);
 }
 
 /* ذخیره */
+
 i.icon.save {
     background-image: url(../images/Ribbon/save.svg);
 }
 
+/* ذخیره شکل فرم */
+
+i.icon.save-form-designer {
+    background-image: url(../images/Ribbon/save.svg);
+}
+
 /* ارجاع */
+
 i.icon.referral {
     background-image: url(../images/Ribbon/referral.svg);
 }
 
 /* ضمائم */
+
 i.icon.attachments {
     background-image: url(../images/Ribbon/attachments.svg);
 }
 
 /* نمایش ضمائم */
+
 i.icon.attachments-view {
     background-image: url(../images/Ribbon/attachments-view.svg);
 }
 
 /* ثبت ارجاع */
+
 i.icon.submit-referral {
     background-image: url(../images/Ribbon/save.svg);
 }
 
 /* انصراف */
+
 i.icon.cancel {
     background-image: url(../images/Ribbon/cancel.svg);
 }
 
 /* کار جدید */
+
 i.icon.new-work {
     background-image: url(../images/Ribbon/new-work.svg);
 }
 
 /* ایجاد کار */
+
 i.icon.create-work {
     background-image: url(../images/Ribbon/create-work.svg);
 }
 
 /* عطف */
+
 i.icon.follow {
     background-image: url(../images/Ribbon/follow.svg);
 }
 
 /* مدت زمان صرف شده */
+
 i.icon.time-spent {
     background-image: url(../images/Ribbon/time-spent.svg);
 }
 
 /* ویرایش */
+
 i.icon.edit {
     background-image: url(../images/Ribbon/edit.svg);
 }
 
 /* فراخوانی کار */
+
 i.icon.call-work {
     background-image: url(../images/Ribbon/call-work.svg);
 }
 
 /* نمایش کار */
+
 i.icon.work-view {
     background-image: url(../images/Ribbon/work-view.svg);
 }
 
 /* نمایش اطلاعات کار */
+
 i.icon.work-info-view {
     background-image: url(../images/Ribbon/work-info-view.svg);
 }
 
 /* فرم کار */
+
 i.icon.work-form {
     background-image: url(../images/Ribbon/work-form.svg);
 }
 
 /* فرم کار پیشرفته */
+
 i.icon.custom-work-form {
     background-image: url(../images/Ribbon/custom-work-form.svg);
 }
 
 /* فرم مالی */
+
 i.icon.financial-form {
     background-image: url(../images/Ribbon/financial-form.svg);
 }
 
 /* فرمساز فرآیند */
+
 i.icon.process-form-builder {
     background-image: url(../images/Ribbon/process-form-builder.svg);
 }
 
+/* طراحی شکل فرم */
+
+i.icon.form-builder-designer {
+    background-image: url(../images/Ribbon/process-form-builder.svg);
+}
+
 /* رونوشت برون سازمانی */
+
 i.icon.external-replication {
     background-image: url(../images/Ribbon/external-replication.svg);
 }
 
 /* رونوشت درون سازمانی */
+
 i.icon.internal-replication {
     background-image: url(../images/Ribbon/internal-replication.svg);
 }
 
 /* ایجاد رونوشت */
+
 i.icon.create-replication {
     background-image: url(../images/Ribbon/create-replication.svg);
 }
 
 /* پیش نیازها */
+
 i.icon.prerequisites {
     background-image: url(../images/Ribbon/prerequisites.svg);
 }
 
 /* ویرایش ارجاع */
+
 i.icon.referral-edit {
     background-image: url(../images/Ribbon/referral-edit.svg);
 }
 
 /* گروه آرشیو کاربر */
+
 i.icon.user-archive-group {
     background-image: url(../images/Ribbon/user-archive-group.svg);
 }
 
 /* نمایش دبیرخانه */
+
 i.icon.view-secretariat {
     background-image: url(../images/Ribbon/view-secretariat.svg);
 }
@@ -35017,7 +35063,6 @@ i.icon.view-secretariat {
     font-family: IRANSans_Fa!important;
     font-size: 13px;
 }
-
 
 .r-modal [class*=MuiFormControl-marginNormal-], .jss2 {
     margin: .5rem 0!important;
@@ -35669,6 +35714,7 @@ i.icon.view-secretariat {
 .r-main-box [class*=RootBase-root] {
     border: none;
 }
+
 /* 
 [class*=RootBase-root] * {
     direction: rtl;
@@ -35837,6 +35883,7 @@ th[class*=MuiTableCell-root] {
     border-bottom: 2px solid #dee2e6
 }
 */
+
 .JDatePicker .JC-Nav {
     cursor: pointer;
 }
@@ -36141,53 +36188,67 @@ min-height: 32px;
     border-color: #eea236;
 }
 
-
-
-
-
-
 .r-formbuilder {
     direction: ltr;
 }
 
 
+.r-formbuilder .is-requierd .input-group-text{
+    border-color: red!important;
+    color: red!important;
+
+}
+.r-formbuilder .is-requierd .input-group-text:after{
+    content: "*";
+    color: red;
+    position: absolute;
+    top:0;
+    right:5px;
+
+}
+/* .r-formbuilder .is-requierd .form-control{
+    border-color: red!important;
+} */
 
 .r-formbuilder input, .r-formbuilder textarea, .r-formbuilder button, .r-formbuilder select {
     /* direction: rtl; */
     border-radius: 0!important;
     resize: none;
-  }
-  
- 
-  
-  .r-formbuilder .react-grid-layout {
+    height:unset!important;
+}
+
+/* .r-formbuilder .react-grid-layout {
     border: 1px solid #eee;
-  }
-  
-  
-  
-  .r-formbuilder .react-grid-item {
+} */
+
+.r-formbuilder .react-grid-item {
     box-sizing: border-box;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
-    padding: 0 20px 0 5px;
-  }
-  
-  .r-formbuilder .react-grid-item:not(.react-grid-placeholder) {
+    padding: 0 15px 0 5px;
+    direction: rtl;
+}
+
+.designed .react-grid-item {
+    padding: 0 5px;
+    border: 0!important;
+}
+
+.r-formbuilder .react-grid-item:not(.react-grid-placeholder) {
     background: transparent;
     border: 1px dashed #cce;
-  }
-  
-  .r-formbuilder .react-grid-item.resizing {
+}
+
+.r-formbuilder .react-grid-item.resizing {
     opacity: 0.9;
-  }
-  
-  .r-formbuilder .react-grid-item.static {
+}
+
+.r-formbuilder .react-grid-item.static {
     background: #cce;
-  }
-  
-  .r-formbuilder .react-grid-item .text {
+}
+
+.r-formbuilder .react-grid-item .text {
     font-size: 12px;
     text-align: center;
     display: flex;
@@ -36195,39 +36256,39 @@ min-height: 32px;
     justify-content: center;
     position: relative;
     margin: auto;
-  }
-  
-  .r-formbuilder .react-grid-item .minMax {
+}
+
+.r-formbuilder .react-grid-item .minMax {
     font-size: 12px;
-  }
-  
-  .r-formbuilder .react-grid-item .add {
+}
+
+.r-formbuilder .react-grid-item .add {
     cursor: pointer;
-  }
-  
-  .r-formbuilder .react-grid-dragHandleExample {
+}
+
+.r-formbuilder .react-grid-dragHandleExample {
     cursor: move;
     /* fallback if grab cursor is unsupported */
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
-  }
-  
-  .r-formbuilder .r-formbuilder__layout {
+}
+
+.r-formbuilder .r-formbuilder__layout {
     min-height: 90px;
-  }
-  
-  .r-formbuilder .toolbox {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-bottom: 0;
+}
+
+.r-formbuilder .toolbox {
+    background-color: #333;
+    margin-bottom: 10px;
     overflow-y: scroll;
     /* direction: rtl; */
     padding: 5px;
     min-height: 33px;
-  }
-  
-  .r-formbuilder .hide-button {
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2)
+}
+
+.r-formbuilder .hide-button {
     cursor: pointer;
     position: absolute;
     font-size: 16px;
@@ -36237,21 +36298,31 @@ min-height: 32px;
     background-color: #c30000;
     color: #fff;
     padding: 3px 2px;
-  }
-  
-  .r-formbuilder .toolbox__title {
-    font-size: 24px;
+}
+
+.r-formbuilder .toolbox__title {
+    font-size: 14px;
     margin-bottom: 15px;
-    display: block;
-  }
-  
-  .r-formbuilder .toolbox__items {
+    margin-top: -5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-align: center;
+}
+.r-formbuilder .toolbox__title  span{
+    background-color: #f00;
+    border-radius: 0 0 8px 8px;
+    padding: 5px 50px;
+    color: #fff;
+}
+.r-formbuilder .toolbox__items {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-  }
-  
-  .r-formbuilder .toolbox__items__item {
+}
+
+.r-formbuilder .toolbox__items__item {
     display: inline-block;
     text-align: center;
     cursor: pointer;
@@ -36259,53 +36330,59 @@ min-height: 32px;
     padding: 5px 10px;
     margin-left: 5px;
     margin-bottom: 5px;
-    border: 1px solid black;
-    background-color: #ddd;
+    /* border: 1px solid black; */
+    background-color: #f2f2f2;
     font-size: 14px;
-  }
-  
-  .r-formbuilder .droppable-element {
+    border-radius: 5px;
+}
+
+.r-formbuilder .droppable-element {
     width: 150px;
     background: #ddd;
     border: 1px solid black;
     margin-top: 10px;
     padding: 10px;
-  }
-  
-  .r-formbuilder .input-group {
+}
+
+.r-formbuilder .input-group {
     position: relative;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     align-items: stretch;
     width: 100%;
-  }
-  
-  .r-formbuilder .input-group-append, .r-formbuilder .input-group-prepend {
-    display: flex;
-  }
-  .r-formbuilder .input-group-text{
-      border-radius: 0!important;
-  }
+}
 
-  .r-formbuilder  [class*=MuiInput-input-], .r-formbuilder .date-input-with-dialog-input{
-      border-radius: 0!important;
-  }
-  .r-formbuilder [class*=MuiInput-input-]:focus{
-      outline: none!important;
-      
-  }
-  .r-formbuilder  [class*=MuiFormControl-]{
-      width: 100%;
-      border-radius: 0;
-  }
-    /* .r-formbuilder [class*=MuiFormControl-] div, .r-formbuilder .date-input-with-dialog-main div{
+.r-formbuilder .input-group-append, .r-formbuilder .input-group-prepend {
+    display: flex;
+}
+
+.r-formbuilder .input-group-text {
+    border-radius: 0!important;
+}
+
+.r-formbuilder [class*=MuiInput-input-], .r-formbuilder .date-input-with-dialog-input {
+    border-radius: 0!important;
+}
+
+.r-formbuilder [class*=MuiInput-input-]:focus {
+    outline: none!important;
+}
+
+.r-formbuilder [class*=MuiFormControl-] {
+    width: 100%;
+    border-radius: 0;
+}
+
+/* .r-formbuilder [class*=MuiFormControl-] div, .r-formbuilder .date-input-with-dialog-main div{
         width: 100%;
     } */
-    [class*=MuiInput-formControl-]{
-        width: 100%;
-    }
-  .r-formbuilder .form-control {
+
+[class*=MuiInput-formControl-] {
+    width: 100%;
+}
+
+.r-formbuilder .form-control {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
@@ -36317,40 +36394,39 @@ min-height: 32px;
     border: 1px solid #ced4da;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border-radius: 0!important;
+}
 
-  }
-  
-  .r-formbuilder .input-group>.custom-file, .r-formbuilder .input-group>.custom-select, .r-formbuilder .input-group>.form-control {
+.r-formbuilder .input-group>.custom-file, .r-formbuilder .input-group>.custom-select, .r-formbuilder .input-group>.form-control {
     position: relative;
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     width: 1%;
     margin-bottom: 0;
-  }
-  
-  .r-formbuilder .form-check {
+}
+
+.r-formbuilder .form-check {
     position: relative;
     display: block;
     padding-right: 30px;
-  }
-  
-  .r-formbuilder .form-check-input {
+}
+
+.r-formbuilder .form-check-input {
     position: absolute;
     margin-top: 2px;
     margin-right: -25px;
-  }
-  
-  .r-formbuilder .form-check-label {
+}
+
+.r-formbuilder .form-check-label {
     margin-bottom: 0;
-  }
-  
-  .r-formbuilder input[type=checkbox], .r-formbuilder input[type=radio] {
+}
+
+.r-formbuilder input[type=checkbox], .r-formbuilder input[type=radio] {
     box-sizing: border-box;
     padding: 0;
-  }
-  
-  .r-formbuilder .btn {
+}
+
+.r-formbuilder .btn {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -36363,26 +36439,26 @@ min-height: 32px;
     font-family: Tahoma;
     line-height: 1.5;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-  }
-  
-  .r-formbuilder  .btn-primary:not(:disabled):not(.disabled) {
+}
+
+.r-formbuilder .btn-primary:not(:disabled):not(.disabled) {
     color: #fff;
     background-color: #0062cc;
     border-color: #005cbf;
-  } 
-  
-  .r-formbuilder .r-formbuilder__group {
+}
+
+.r-formbuilder .r-formbuilder__group {
     width: 100%;
-  }
-  
-  .r-formbuilder .r-formbuilder__group h5 {
+}
+
+.r-formbuilder .r-formbuilder__group h5 {
     position: relative;
-    height: 40px;
+    /* height: 40px; */
     display: flex;
     align-items: center;
-  }
-  
-  .r-formbuilder .r-formbuilder__group h5::after {
+}
+
+.r-formbuilder .r-formbuilder__group h5::after {
     content: "";
     position: absolute;
     right: 0;
@@ -36392,29 +36468,81 @@ min-height: 32px;
     background-color: #333;
     top: 100%;
     transform: translateY(-50%);
-  }
-  
-  .r-formbuilder .r-formbuilder__img {
+}
+
+.r-formbuilder .r-formbuilder__img {
     max-height: 100%;
+    height: 100%;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-  }
-  .r-formbuilder .r-formbuilder__img input[type="file"]{
+}
+.r-formbuilder .r-formbuilder__img  .input-group-text{
+    width: 100%;
+    display: block;
+    position: relative;
+}
+
+.r-formbuilder .r-formbuilder__img input[type="file"] {
     display: none;
-  }
-  .r-formbuilder .r-formbuilder__img-holder{
-    width: 120px;
-    height: 120px;
+}
+
+.r-formbuilder .r-formbuilder__img-holder {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
-    border: 1px dashed #ced4da;
+    /* margin-left: 10px; */
+    border: 1px solid #ced4da;
     background-color: #f1f2f3;
     cursor: pointer;
-  }
-  .r-formbuilder .r-formbuilder__img img {
+}
+
+.r-formbuilder .is-requierd .r-formbuilder__img-holder {
+    border:1px solid red;
+}
+
+.r-formbuilder .r-formbuilder__img img {
+    max-height: 100%;
     max-width: 100%;
-  }
+}
+
+
+.r-formbuilder .is-disabled input,
+.r-formbuilder .is-disabled select,
+.r-formbuilder .is-disabled div{
+    pointer-events:none!important;
+}
+.r-formbuilder .is-disabled{
+    cursor: not-allowed!important;
+}
+
+body.print{
+    background: none!important;
+    padding: 0!important;
+}
+body.print:before,body.print:after{
+    display: none!important;
+}
+body.print .is-requierd .input-group-text{
+    border-color: #ced4da!important;
+    color:unset!important;
+    /* border:0!important;
+background: none!important; */
+}
+/* body.print  .r-formbuilder .form-control
+{
+border:0!important;
+} */
+body.print .is-requierd .input-group-text:after{
+    display: none!important;
+}
+body.print .is-requierd .r-formbuilder__img-holder {
+    border: 1px solid #ced4da!important;
+}
+body.print .r-formbuilder__img .btn-danger{
+    display:none!important;
+}
